force-app/main/default/objects/IManage_Mapping_Configuration__c/IManage_Mapping_Configuration__c.object-meta.xml
<CustomObject>
    <label>iManage Mapping Configuration</label>
    <nameField>
        <displayFormat>MAP-{000000}</displayFormat>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Mapping Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>