force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Client_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Field__c</fullName>
    <label>Salesforce Client Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>