force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Entity_Client_Id_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Entity_Client_Id_Object_Field__c</fullName>
    <label>Salesforce Client Id Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>