force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Entity_Matter_Id_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Entity_Matter_Id_Object_Field__c</fullName>
    <label>Salesforce Matter Id Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>