force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Entity Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>