force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Library_Field__c.field-meta.xml
<CustomField>
    <fullName>Library_Field__c</fullName>
    <label>Salesforce Library Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>