force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Matter_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Matter_Name_Field__c</fullName>
    <label>Salesforce Matter Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>