force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Use_Only_Custom2__c.field-meta.xml
<CustomField>
    <fullName>Use_Only_Custom2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don't look for Custom1</label>
    <type>Checkbox</type>
</CustomField>