force-app/main/default/objects/IManage_Mapping_Configuration__c/fields/Workspace_Template_Field__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Template_Field__c</fullName>
    <label>iManage Workspace Template Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>